--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:background="@color/colorPrimary"
-        android:visibility="gone"
+        android:visibility="visible"
         app:itemIconTint="@color/colorWhiteBg"
         app:itemTextColor="@color/colorWhiteBg"
         app:menu="@menu/navigation" />
